--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-+ Word on add new transaction modal - add server function to add and update transactions
+- add server function to add and update transactions
 - Import transactions button - see what can we do with this
 - Work on other pages and database schema update it.
